platform/infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: los-ojos
  labels:
    app.kubernetes.io/name: los-ojos
    app.kubernetes.io/part-of: los-ojos-platform
